add_executable(testlaser testlaser.cpp)

file(COPY Data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

file(COPY test_01 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME LASER_PCA WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_01
        COMMAND ${CMAKE_COMMAND}
        -DLASER=${CMAKE_BINARY_DIR}/src/laser
        -DGENO=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_238_chr22.geno
        -DTESTLASER=${CMAKE_CURRENT_BINARY_DIR}/testlaser
        -P ${CMAKE_CURRENT_SOURCE_DIR}/test_01/pca_compare.cmake)

file(COPY test_02 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME LASER_ANS WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_02
        COMMAND ${CMAKE_COMMAND}
        -DLASER=${CMAKE_BINARY_DIR}/src/laser
        -DGENO_REF=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_238_chr22.geno
        -DCOORD_REF=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_238_chr22.RefPC.coord
        -DSEQ_STUDY=${CMAKE_CURRENT_BINARY_DIR}/Data/HapMap_6_chr22.seq
        -P ${CMAKE_CURRENT_SOURCE_DIR}/test_02/laser_ans.cmake)

file(COPY test_03 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME TRACE_ANS_W_COORDS WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_03
        COMMAND ${CMAKE_COMMAND}
        -DTRACE=${CMAKE_BINARY_DIR}/src/trace
        -DGENO_REF=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_238_chr22.geno
        -DCOORD_REF=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_238_chr22.RefPC.coord
        -DGENO_STUDY=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_700_chr22.geno
        -DTESTLASER=${CMAKE_CURRENT_BINARY_DIR}/testlaser
        -P ${CMAKE_CURRENT_SOURCE_DIR}/test_03/trace_ans.cmake)

file(COPY test_04 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME TRACE_ANS_WO_COORDS WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_04
        COMMAND ${CMAKE_COMMAND}
        -DTRACE=${CMAKE_BINARY_DIR}/src/trace
        -DGENO_REF=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_238_chr22.geno
        -DGENO_STUDY=${CMAKE_CURRENT_BINARY_DIR}/Data/HGDP_700_chr22.geno
        -DTESTLASER=${CMAKE_CURRENT_BINARY_DIR}/testlaser
        -P ${CMAKE_CURRENT_SOURCE_DIR}/test_04/trace_ans.cmake)

